--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -12,8 +12,8 @@
     <ul>
       <li  align="left"> Python, OpenCV </li>
     </ul>
-    <p align="justify"> This project involves Augmented reality without the use of markers. An image of an advert & video 
-      can be projected on a surface by persistent frame-by-frame homography tracking.</p>
+    <p align="justify"> This project involves Augmented reality without the use of markers. An image of an advert or video 
+      frames can be projected on a surface by persistent frame-by-frame homography tracking.</p>
     <a class="project-link" href="https://github.com/kbmajeed/markerless_ar">Check it out</a>
   </div>
 </div>
@@ -27,9 +27,9 @@
     <ul>
       <li align="left"> Python, OpenCV, Numpy </li>
     </ul>
-    <p align="justify"> Exposure fusion is a technique that creates a single image with optimal detail from a set of multi-exposed images. 
-        As developed by Tom Mertens et al., the proposed algorithm computes relevant quality measures; Contrast, Saturation, and Well-Exposedness.  
-      These measures are then combined to create a weight map used to blend each of the multi-exposed images to a single image with best exposure. </p>
+    <p align="justify"> Exposure fusion creates a single image with optimal detail from a set of multi-exposed images. 
+        As developed by Tom Mertens et al., quality measures; Contrast, Saturation, and Well-Exposedness are used to create
+      a weight map that blends each of the multi-exposed images to a single image with best exposure. </p>
     <a class="project-link" href="https://github.com/kbmajeed/exposure_fusion">Check it out</a>
   </div>
 </div>
@@ -58,8 +58,8 @@
     <ul>
       <li align="left"> Python, OpenCV </li>
     </ul>
-    <p align="justify"> The Kalman filter algorithm is used to track a Pedestrian using a template sample.
-    The same algorithm works well when HOG features are used.</p>
+    <p align="justify"> The Particle filter algorithm is used to track a Pedestrian using a template sample.
+    Detection also works well when HOG features are used with a Kalman filter.</p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
@@ -73,9 +73,9 @@
     <ul>
       <li align="left"> Python, Pandas, NumPy </li>
     </ul>
-    <p align="justify"> This work builds on a Random Forest machine learning algorithm for stock trading. Historical stock 
-    data is used to train the algorithm in-sample. It is then tested by simulating the possible portfolio performance using a
-    market simulator. Portfolio gains of around 200% was achieved for AAPL stock in 2008 (in-sample) vs 2009 (out-sample)</p>
+    <p align="justify"> Historical market data is used to train a Random Forest algorithm in-sample. 
+      It is then tested by simulating the possible portfolio performance using a market simulator. 
+      Portfolio gains around 200% was achieved for AAPL stock in 2008 (in-sample) vs 2009 (out-sample)</p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
   </div>
 </div>
@@ -90,7 +90,7 @@
       <li align="left"> Python, Pandas, NumPy </li>
     </ul>
     <p align="justify"> The objective of this project is to showcase different indicators used in the stock market for trading
-     decisions Bollinger bands, %b, Relative Strength Index, and Moving Average Convergence Divergence.</p>
+     decisions: Bollinger bands, %b, Relative Strength Index, and Moving Average Convergence Divergence.</p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
@@ -104,8 +104,8 @@
     <ul>
       <li align="left"> Python, Pandas, NumPy </li>
     </ul>
-    <p align="justify"> This Portfolio simulator builds the performance of the portolio for a given stock and market data.
-        It receives an "Orders" file containing actions: "BUY", "SELL", Symbol of the stock, Dates, and 
+    <p align="justify"> This Portfolio simulator builds the performance of a portolio for a given stock(s) and market data.
+        It receives an "Orders" file containing actions: "BUY", "SELL", Symbol of the stock, Dates, Transaction costs, and 
       Starting value. The simulator then builds the portolio returns</p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
@@ -120,7 +120,7 @@
     <ul>
       <li align="left"> Python, OpenCV </li>
     </ul>
-    <p align="justify"> Face detection was performed as described in the Viola-Jonespaper. Haar features create
+    <p align="justify"> Face detection was performed as described in the Viola-Jones paper. Haar features create
       representations for human faces while Boosting enhances the performance of the learner 
       by concentrating on difficult samples.</p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/"> Private </a>
@@ -136,8 +136,8 @@
     <ul>
       <li align="left"> Python, OpenCV </li>
     </ul>
-    <p align="justify"> This project performs motion detection using the Lucas Kanade (LK) algorithm which is based on 
-      the least squares solution of the Optical flow equations. It is assumed that objects move slowly, 
+    <p align="justify"> Motion detection using the Lucas Kanade (LK) algorithm which is based on 
+      the least squares solution of NxN Optical flow equations. It is assumed that objects move slowly, 
       however, for objects with more displacement, the Heirarchical LK performs better
     .</p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/"> Private </a>
@@ -187,7 +187,7 @@
     <ul>
       <li align="left"> Python </li>
     </ul>
-    <p align="justify"> The Model-free reinforcement learning Q-learning algorithm was programmed for navigating 
+    <p align="justify"> The Model-free reinforcement Q-learning algorithm was programmed for navigating 
     a simple maze. A Q-table is built based on immediate and discounted rewards using experience tuples as the 
       bot interacts with the world. </p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
@@ -219,7 +219,7 @@
       <li align="left"> RNN, ML, Sequence-to-Sequence learning, NLP </li>
     </ul>
     <p align="justify">Reccurent Neural Networks (RNN) are excellent for sequence-to-sequence learning.
-    In this project cool, they are used to generate Yoruba names in a closed-loop fashion
+    In this cool project, they are used to generate Yoruba names in a closed-loop fashion
     with inspiration drawn from Control theory.</p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/"> Private </a>
   </div>
@@ -249,8 +249,8 @@
     <ul>
       <li align="left"> Python, YOLO, Keras, Tensorflow </li>
     </ul>
-    <p align="justify">YOLO ("you only look once") is a popular algoritm because it achieves high accuracy while 
-      also being able to run in real-time. This algorithm "only looks once" at the image in the sense that it 
+    <p align="justify">YOLO is a popular algorithm because it achieves high accuracy while 
+      also being able to run in real-time. This algorithm (you-) "only looks once" at the image in the sense that it 
       requires only one forward propagation pass through the network to make predictions. After non-max suppression,
       it then outputs recognized objects together with the bounding boxes.</p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
@@ -264,10 +264,10 @@
   <div class="contents">
     <h3 align="center"> Dinasour name generation using RNN </h3>
     <ul>
-      <li align="left"> RNN, ML, Sequence-to-Sequence learning, NLP </li>
+      <li align="left"> RNN, Sequence-to-Sequence learning, NLP </li>
     </ul>
     <p align="justify">Recurrent Neural Networks (RNN) are excellent for sequence-to-sequence learning.
-    In this project cool, they are used to generate names for Dinosaurs.</p>
+    In this interesting project, they are used to generate names for Dinosaurs.</p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
   </div>
 </div>
@@ -282,7 +282,7 @@
     <ul>
       <li align="left"> Python, Art-NST, Tensorflow </li>
     </ul>
-    <p align="justify">Neural Style Transfer (NST) is one of the most fun techniques in deep learning. 
+    <p align="justify">Neural Style Transfer (NST) is one of the un techniques in deep learning. 
       It merges two images, namely, a "content" image (C) and a "style" image (S), to create a "generated" image (G). 
       The generated image G combines the "content" of the image C with the "style" of image S.</p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/"> Private </a>
@@ -299,7 +299,7 @@
     <ul>
       <li align="left"> Python, Keras, Tensorflow, Triplet Loss </li>
     </ul>
-    <p align="justify">Given two images you have to tell if they are of the same person. Due to variations 
+    <p align="justify">Given two images, how can a bot tell if they are the same person (?). Due to variations 
       in lighting, orientation of the person's face, even minor changes in head position, and so on, directly 
       comparing pixel values won't work. Instead, learning an encoding gives more accurate
     judgements as to whether two pictures are of the same person. </p>
@@ -368,7 +368,7 @@
       <li align="left"> Matlab, Simulink, Lyapunov Backstepping </li>
     </ul>
     <p align="justify"> Lyapunov based based backstepping controller was developed to control an induction motor.
-      Induction Motors are reliable, rugged and cheap. Main problem arises from: coupled highly nonlinear model,
+      Induction Motors are reliable, rugged and cheap. Main problem in control arises from: coupled highly nonlinear model,
       unavailability of certain parameters and time varying nature of some parameters. </p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
@@ -401,8 +401,8 @@
       <li align="left"> Python, Keras </li>
     </ul>
     <p align="justify">FaceNet learns a neural network that encodes a face image into a vector of 128 numbers. 
-      By comparing two such vectors, you can then determine if two pictures are of the same person. 
-      A triplet loss function was used, with a pretrained model with  encodings to perform face 
+      By comparing two such vectors, an algorithm can determine if two pictures are of the same person. 
+      A triplet loss function was used on a pretrained model with encodings to perform face 
       verification and face recognition</p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/"> Private </a>
   </div>
@@ -436,7 +436,7 @@
     </ul>
     <p align="justify"> Classification of "Cat vs non-Cat" dataset using Deep neural networks.
     Compared to simple logistic regression, the DNN yields better classification accuracy.
-    Performance of 70% with logistic regression, 72% with 2 layers, and 80% with a 4 layer network.</p>
+    Performance of 70% with logistic regression, 72% with 2 layers, and 80% with a 4 layer network without tuning.</p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
   </div>
 </div>
@@ -482,7 +482,7 @@
     <ul>
       <li align="left"> Python, OpenCV, NumPy, Dynamic Programming </li>
     </ul>
-    <p align="justify">Reproducing the paper content-aware image resizing presented by Shai-Avidan and Ariel Shamir. 
+    <p align="justify">Reproducing the paper "Content-aware image resizing" by Shai-Avidan et al. 
       Using the seam carving algorithm, three images are subject to: (1) aspect ratio change by seam removal, 
       (b) aspect ratio change by seam insertion, and (c) aspect ratio change by optimal retargeting.</p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
@@ -513,8 +513,8 @@
     <ul>
       <li align="left"> Lua, VREP </li>
     </ul>
-    <p align="justify">Using Virtual Robot Experimentation Platform, a Quadrotor can be controlled using a dedicated controller
-      such as PID with a Lua script. Quadrotor includes visual feedback to detect the desired landing spot.</p>
+    <p align="justify"> With Virtual Robot Experimentation Platform, a Quadrotor can be controlled using a dedicated controller
+      such as PID in a Lua script. Quadrotor incorporates visual feedback to detect the desired landing spot.</p>
     <a class="project-link" href="https://youtu.be/rknVlYxYKeY">Check it out</a>
   </div>
 </div>
