--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -45,7 +45,7 @@
     </ul>
     <p align="justify"> Object tracking was performed using the Particle Filter algorithm. For robustness,
     higher level motion dynamics can be incorporated in the algorithmic formulation.</p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
   </div>
 </div>
 
@@ -60,7 +60,7 @@
     </ul>
     <p align="justify"> The Particle filter algorithm is used to track a Pedestrian using a template sample.
     Detection also works well when HOG features are used with a Kalman filter.</p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
   </div>
 </div>
 
@@ -91,7 +91,7 @@
     </ul>
     <p align="justify"> The objective of this project is to showcase different indicators used in the stock market for trading
      decisions: Bollinger bands, %b, Relative Strength Index, and Moving Average Convergence Divergence.</p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
   </div>
 </div>
 
@@ -107,7 +107,7 @@
     <p align="justify"> This Portfolio simulator builds the performance of a portolio for a given stock(s) and market data.
         It receives an "Orders" file containing actions: "BUY", "SELL", Symbol of the stock, Dates, Transaction costs, and 
       Starting value. The simulator then builds the portolio returns</p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
   </div>
 </div>
 
@@ -370,7 +370,7 @@
     <p align="justify"> Lyapunov based based backstepping controller was developed to control an induction motor.
       Induction Motors are reliable, rugged and cheap. Main problem in control arises from: coupled highly nonlinear model,
       unavailability of certain parameters and time varying nature of some parameters. </p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
   </div>
 </div>
 
@@ -453,7 +453,7 @@
     <p align="justify"> Using ORB feature detector, matched source and destination keypoints are used to calculate the
     homography transform between input images. The homography is then used to warp the images, which
     are finally blended together</p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
   </div>
 </div>
 
