--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -66,7 +66,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/stockmarket.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/stock_market.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Random Forests for Algorithmic Trading </h3>
@@ -156,6 +156,24 @@
     <p align="justify"> Hyperparameters are very important for optimum performance of Deep learning models.
       These include: number of layers, number of units, dropout, momentum, epochs, batch-size, learning-rate.
       This work explores different values of these parameters and the corresponding performance on an MNIST-DNN model.
+    </p>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
+  </div>
+</div>
+
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/trigger_word.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3 align="center"> Voice Trigger Detection </h3>
+    <ul>
+      <li align="left"> Python, Keras, GRU, Voice detection </li>
+    </ul>
+    <p align="justify"> Trigger word detection is the technology that allows devices like Amazon Alexa, Google Home, 
+      Apple Siri, and Baidu DuerOS to wake up upon hearing a certain word. The model built uses 1-D convolutional layers,
+      GRU layers, and dense layers on audio segments converted to spectrograms.
     </p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
   </div>
@@ -336,6 +354,61 @@
     <p align="justify"> The SIGNS dataset is a collection of 6 signs representing numbers from 0 to 5.
       A ConvNet was built with TensorFlow for solving this classification problem. Steps include: Creating placeholders,
       initializing parameters, forward propagation, computing cost, and then optimization. </p>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
+  </div>
+</div>
+
+
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/jazz_improv.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3 align="center"> Jazz Improvisation with LSTM </h3>
+    <ul>
+      <li align="left"> Python, Keras, LSTM </li>
+    </ul>
+    <p align="justify"> Generating Jazz music with deep learning. An LSTM model is trained on random snippets of 
+      values taken from a much longer piece of music to learn the patterns of the jazz soloist. 
+      This would be used to synthesize new music.
+    </p>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
+  </div>
+</div>
+
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/emojis.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3 align="center"> Creating Emojis </h3>
+    <ul>
+      <li align="left"> Python, Keras, LSTM </li>
+    </ul>
+    <p align="justify"> Word vector representations were used to build an Emojifier which automatically
+      appends emojis to text: "Congratulations on the promotion! 👍. Lets get coffee and talk. ☕️ Love you! ❤️"
+    </p>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
+  </div>
+</div>
+
+
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/skip_connnetwork.PNG" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3 align="center"> Neural Machine Translation </h3>
+    <ul>
+      <li align="left"> Python, Keras, Bi-LSTM, Attention model, NVidia </li>
+    </ul>
+    <p align="justify"> A Neural Machine Translation (NMT) model is built to translate human readable dates 
+      ("25th of June, 2009") into machine readable dates ("2009-06-25") using an attention model, 
+      (one of the most sophisticated sequence to sequence models).
+    </p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
   </div>
 </div>
