--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -164,7 +164,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/trigger_word.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/soundwaves.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Voice Trigger Detection </h3>
