--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -87,11 +87,12 @@
   <div class="contents">
     <h3 align="center"> Bollinger Bands, RSI, MACD Stock Market Indicators </h3>
     <ul>
-      <li align="left"> Python, Pandas, NumPy </li>
+      <li align="left"> Python, Pandas, NumPy, Jupyter </li>
     </ul>
     <p align="justify"> The objective of this project is to showcase different indicators used in the stock market for trading
-     decisions: Bollinger bands, %b, Relative Strength Index, and Moving Average Convergence Divergence.</p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
+     decisions: Bollinger bands, %b, Relative Strength Index, and Moving Average Convergence Divergence. These help in identifying
+    Bullish and Bearish market, and in deciding when to Short, Long, or Hold a position.</p>
+    <a class="project-link" href="https://github.com/kbmajeed/market_indicators/">Check it out</a>
   </div>
 </div>
 
