--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -439,12 +439,12 @@
   <div class="contents">
     <h3 align="center"> Nonlinear Backstepping Control of Induction Motor </h3>
     <ul>
-      <li align="left"> Matlab, Simulink, Lyapunov Backstepping </li>
+      <li align="left"> Matlab, Simulink, Motor, Lyapunov </li>
     </ul>
     <p align="justify"> Lyapunov based based backstepping controller was developed to control an induction motor.
       Induction Motors are reliable, rugged and cheap. Main problem in control arises from: coupled highly nonlinear model,
       unavailability of certain parameters and time varying nature of some parameters. </p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
+    <a class="project-link" href="https://github.com/kbmajeed/induction_motor"> Check it out </a>
   </div>
 </div>
 
