--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -441,7 +441,7 @@
     <ul>
       <li align="left"> Matlab, Simulink, Motor, Lyapunov </li>
     </ul>
-    <p align="justify"> Lyapunov based based backstepping controller was developed to control an induction motor.
+    <p align="justify"> Lyapunov-based based backstepping controller was developed to control an induction motor.
       Induction Motors are reliable, rugged and cheap. Main problem in control arises from: coupled highly nonlinear model,
       unavailability of certain parameters and time varying nature of some parameters. </p>
     <a class="project-link" href="https://github.com/kbmajeed/induction_motor"> Check it out </a>
@@ -543,7 +543,7 @@
     <p align="justify">Implementing the paper "A multiresolution spline with application to image mosaics".
       A cool framework was developed to blend images using a predefined mask. This can 
       be used for interesting image editing such as face swaps</p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
+    <a class="project-link" href="https://github.com/kbmajeed/image_blending"> Check it out</a>
   </div>
 </div>
 
