--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -559,7 +559,7 @@
     <p align="justify">Reproducing the paper "Content-aware image resizing" by Shai-Avidan et al. 
       Using the seam carving algorithm, three images are subject to: (1) aspect ratio change by seam removal, 
       (b) aspect ratio change by seam insertion, and (c) aspect ratio change by optimal retargeting.</p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
+    <a class="project-link" href="https://github.com/kbmajeed/seam_carving">Check it out</a>
   </div>
 </div>
 
