--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -511,7 +511,7 @@
     <p align="justify"> Classification of "Cat vs non-Cat" dataset using Deep neural networks.
     Compared to simple logistic regression, the DNN yields better classification accuracy.
     Performance of 70% with logistic regression, 72% with 2 layers, and 80% with a 4 layer network without tuning.</p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
+    <a class="project-link" href="https://github.com/kbmajeed/cat_vs_noncat">Check it out</a>
   </div>
 </div>
 
