added samsung bixby to voice trigger detection

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -172,7 +172,7 @@
     <ul>
       <li align="left"> Python, Keras, GRU, Voice detection </li>
     </ul>
-    <p align="justify"> Trigger word detection is the technology that allows devices like Amazon Alexa, Google Home, 
+    <p align="justify"> Trigger word detection is the technology that allows devices like Samsung Bixby, Amazon Alexa, Google Home, 
       Apple Siri, and Baidu DuerOS to wake up upon hearing a certain word. The model built uses 1-D convolutional layers,
       GRU layers, and dense layers on audio segments converted to spectrograms.
     </p>
