--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -36,7 +36,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/Mittshand_gif.gif" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/mitt_gif.gif" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3  align="center"> Object Tracking using Particle Filter </h3>
@@ -51,7 +51,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/Pedestrian_gif.gif" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/pede_gif.gif" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Pedestrian Tracking and Detection </h3>
