--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -85,7 +85,7 @@
     <img alt="mountains" src="{{ "/assets/img/Figure1.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3 align="center"> Market Technical Indicators: BollingerBands &reg;, RSI, MACD, EWA  </h3>
+    <h3 align="center"> Market Technical Indicators: Bollinger&reg;, RSI, MACD, EWA  </h3>
     <ul>
       <li align="left"> Python, Pandas, NumPy, Jupyter </li>
     </ul>
