--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -59,7 +59,8 @@
       <li align="left"> Python, OpenCV </li>
     </ul>
     <p align="justify"> The Particle filter algorithm is used to track a Pedestrian using a template sample.
-    Detection also works well when HOG features are used with a Kalman filter.</p>
+    Detection also works well when HOG features are used with a Kalman filter. This has applications in
+    traffic analysis and self-driving cars.</p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
   </div>
 </div>
@@ -85,7 +86,7 @@
     <img alt="mountains" src="{{ "/assets/img/Figure1.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3 align="center"> Market Technical Indicators: Bollinger&reg Bands;, RSI, MACD, EWA  </h3>
+    <h3 align="center"> Market Technical Indicators: Bollinger&reg Bands, RSI, MACD, EWA  </h3>
     <ul>
       <li align="left"> Python, Pandas, NumPy, Jupyter </li>
     </ul>
