--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -102,13 +102,13 @@
     <img alt="mountains" src="{{ "/assets/img/stockmarket.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3 align="center"> Stock Market Portolio Simulator </h3>
+    <h3 align="center"> Stock Market Portfolio Simulator </h3>
     <ul>
       <li align="left"> Python, Pandas, NumPy </li>
     </ul>
-    <p align="justify"> This Portfolio simulator builds the performance of a portolio for a given stock(s) and market data.
+    <p align="justify"> This Portfolio simulator builds the performance of a portfolio for a given stock(s) and market data.
         It receives an "Orders" file containing actions: "BUY", "SELL", Symbol of the stock, Dates, Transaction costs, and 
-      Starting value. The simulator then builds the portolio returns</p>
+      Starting value. The simulator then builds the portfolio returns</p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Private</a>
   </div>
 </div>
