--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,9 +7,9 @@
    <p> I’m a Robotics enthusiast. From Unmanned vehicles to Robotic surgery to Smart Vision Systems, 
     I have passion for every system that can sense, think, and act on its own.
     My experience ranges from Signals and Communications (B.Eng), Systems, Robotics and Control theory (M.Sc), 
-    and currently, a Machine learning specialization (2nd M.Sc). I’ve had the opportunity to work with 
-    Ultrasonic and EMAT technologies for Oil and Gas In-line inspection. Similarly, I
-    have experience in the communcations industry and once helped develop software for a medical facility..</p>
+    and Computer Science with a specialization in Machine learning (2nd M.Sc). I’ve had the opportunity to work with 
+    Ultrasonic and EMAT technologies for Oil and Gas In-line inspection. Similarly, I have experience in the 
+    communcations industry, academia, and once helped develop software for a medical facility.</p>
    </div>
 
    <div class="user">
@@ -18,7 +18,7 @@
       <h2>Code</h2>
       <i class="devicon-python-plain"></i>
       <i class="devicon-cplusplus-plain"></i>
-      <p>Python, MATLAB, C++</p>
+      <p>Python, MATLAB, R, C++</p>
     </div>
     
     <div class="tech">
@@ -26,7 +26,7 @@
       <i class="devicon-git-plain"></i>
       <i class="devicon-github-plain"></i>
       <i class="devicon-linux-plain"></i>
-      <p>NumPy, OpenCV, ROS, GIT, Keras</p>
+      <p>NumPy, SciPy, OpenCV, Pandas, Keras</p>
     </div>
    
     <div class="tech">
@@ -34,7 +34,7 @@
       <i class="devicon-html5-plain-wordmark"></i>
       <i class="devicon-css3-plain"></i>
       <i class="devicon-illustrator-plain"></i>
-      <p>HTML, CSS, Jekyll, Ai, SolidWorks</p>
+      <p>HTML/CSS/Javascript, ROS, GIT, Ai, SolidWorks</p>
     </div>
 
 </div>
