--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -113,6 +113,25 @@
   </div>
 </div>
 
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/face_detect.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3 align="center"> SimpleRPM: Novel Algorithm for Solving Ravens Progressive Matrices </h3>
+    <ul>
+      <li align="left"> Python, PIL </li>
+    </ul>
+    <p align="justify"> Ravens progressive matrices (RPM) is a cognitive test. This workds develops a Knowledge-based
+    AI Agent to solve the RPM problems using visual heuristics. It utilizes three steps: re-representation - a global
+    contractive transformation, a prediction stage, and a matching/optimization stage. It is one of the simplest AI
+    agents and can be implemented in just 5 lines of code!</p>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/"> Private </a>
+  </div>
+</div>
+
+
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/face_detect.jpg" | prepend: site.baseurl }}" />
