--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -116,7 +116,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/face_detect.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/simple_rpm.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> SimpleRPM: Novel Algorithm for Solving Ravens Progressive Matrices </h3>
