--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -127,7 +127,7 @@
     AI Agent to solve the RPM problems using visual heuristics. It utilizes three steps: re-representation - a global
     contractive transformation, a prediction stage, and a matching/optimization stage. It is one of the simplest AI
     agents and can be implemented in just 5 lines of code!</p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/"> Private </a>
+    <a class="project-link" href="https://github.com/kbmajeed/SimpleRPM"> Check it out </a>
   </div>
 </div>
 
