--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -125,8 +125,8 @@
     </ul>
     <p align="justify"> Ravens progressive matrices (RPM) is a cognitive test. This workds develops a Knowledge-based
     AI Agent to solve the RPM problems using visual heuristics. It utilizes three steps: re-representation - a global
-    contractive transformation, a prediction stage, and a matching/optimization stage. It is one of the simplest AI
-    agents and can be implemented in just 5 lines of code!</p>
+    contractive transformation, followed by a prediction stage, and finally an optimization (matching) stage. 
+      It is one of the simplest agents and can be implemented in just 5 lines of code!</p>
     <a class="project-link" href="https://github.com/kbmajeed/SimpleRPM"> Check it out </a>
   </div>
 </div>
