--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,6 +5,22 @@
 
 <div class="user-projects">
   <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/nvidia_dli.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3 align="center"> NVIDIA GTC 2020 </h3>
+    <ul>
+      <li  align="left"> Nvidia Deep Learning Institute </li>
+    </ul>
+    <p align="justify"> This is an annual event organized by Nvidia. Here, I participated in four topics
+      at the institute's DLI workshop: (1) Introduction to CUDA python with Numba, (2) 3D Segmentation with VNet,
+      (3) Anomaly Detection with Variational AutoEncoders, and (4) Data Augmentation and Segmentation with GANs.</p>
+    <a class="project-link" href="https://github.com/kbmajeed/markerless_ar">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/aug_reality.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
