--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -8,12 +8,12 @@
     <img alt="mountains" src="{{ "/assets/img/nvidia_dli.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3 align="center"> NVIDIA GTC 2020 </h3>
+    <h3 align="center"> Nvidia Deep Learning Institute </h3>
     <ul>
-      <li  align="left"> Nvidia Deep Learning Institute </li>
+      <li  align="left"> NVIDIA GTC 2020 </li>
     </ul>
     <p align="justify"> This is an annual event organized by Nvidia. Here, I participated in four topics
-      at the institute's DLI workshop: (1) Introduction to CUDA python with Numba, (2) 3D Segmentation with VNet,
+      at the institute's DLI workshop: (1) CUDA python with Numba, (2) 3D Segmentation with VNet,
       (3) Anomaly Detection with Variational AutoEncoders, and (4) Data Augmentation and Segmentation with GANs.</p>
     <a class="project-link" href="https://github.com/kbmajeed/Nvidia_GTC2020">Check it out</a>
   </div>
@@ -135,12 +135,12 @@
     <img alt="mountains" src="{{ "/assets/img/simple_rpm.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3 align="center"> SimpleRPM: Novel Algorithm for Solving Ravens Progressive Matrices </h3>
+    <h3 align="center"> SimpleRPM: Novel Algorithm for Ravens Progressive Matrices </h3>
     <ul>
       <li align="left"> Python, PIL </li>
     </ul>
-    <p align="justify"> Ravens progressive matrices (RPM) is a cognitive test. This workds develops a Knowledge-based
-    AI Agent to solve the RPM problems using visual heuristics. It utilizes three steps: re-representation - a global
+    <p align="justify"> Ravens progressive matrices (RPM) is a cognitive test. This work develops a Knowledge-based
+    AI Agent to solve the RPM problems using visual heuristics. There are three steps: re-representation - a global
     contractive transformation, followed by a prediction stage, and finally an optimization (matching) stage. 
       It is one of the simplest agents and can be implemented in just 5 lines of code!</p>
     <a class="project-link" href="https://github.com/kbmajeed/SimpleRPM"> Check it out </a>
