--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -19,6 +19,22 @@
   </div>
 </div>
 
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/covid19.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3 align="center"> COVID-19 Case Forecasting </h3>
+    <ul>
+      <li  align="left"> Data visualization, Analytics, Webscraping  </li>
+    </ul>
+    <p align="justify"> An Online forecasting algorithm was developed by combining ARIMA, PROPHET,
+      and Holt-Winters + GARCH for predicting future number of COVID-19 cases in Nigeria.</p>
+    <a class="project-link" href="https://github.com/kbmajeed/nigeria_covid19">Check it out</a>
+  </div>
+</div>
+
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/aug_reality.jpg" | prepend: site.baseurl }}" />
