--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -22,7 +22,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/covid19.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/covid19.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> COVID-19 Case Forecasting </h3>
