--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -15,7 +15,7 @@
     <p align="justify"> This is an annual event organized by Nvidia. Here, I participated in four topics
       at the institute's DLI workshop: (1) CUDA python with Numba, (2) 3D Segmentation with VNet,
       (3) Anomaly Detection with Variational AutoEncoders, and (4) Data Augmentation and Segmentation with GANs.</p>
-    <a class="project-link" href="https://github.com/kbmajeed/Nvidia_GTC2020">Check it out</a>
+    <a class="project-link" href="https://github.com/kbmajeed/Nvidia_GTC2020">Private</a>
   </div>
 </div>
 
@@ -31,7 +31,7 @@
     </ul>
     <p align="justify"> An Online forecasting algorithm was developed by combining ARIMA, PROPHET,
       and Holt-Winters + GARCH for predicting future number of COVID-19 cases in Nigeria.</p>
-    <a class="project-link" href="https://github.com/kbmajeed/nigeria_covid19">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
 
