--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -620,7 +620,7 @@
     <img alt="mountains" src="{{ "/assets/img/jammer.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3 align="center"> Mobile Phone Jammer Using Extrinsic Noise </h3>
+    <h3 align="center"> Mobile Phone Jammer using Extrinsic Noise </h3>
     <ul>
       <li align="left"> Hardware, Radio Frequency, 2G/3G, VCXO </li>
     </ul>
